--- a/arch/arm/boot/dts/exynos4412-trats2.dts
+++ b/arch/arm/boot/dts/exynos4412-trats2.dts
@@ -626,7 +626,7 @@
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
-					regulator-mem-on;
+					opmode-sleep-lpm;
 				};
 
 				ldo2_reg: ldo@2 {
@@ -635,7 +635,7 @@
 					regulator-min-microvolt = <1200000>;
 					regulator-max-microvolt = <1200000>;
 					regulator-always-on;
-					regulator-mem-on;
+					opmode-sleep-off;
 				};
 
 				ldo3_reg: ldo@3 {
@@ -644,7 +644,7 @@
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
-					regulator-mem-on;
+					opmode-sleep-lpm;
 				};
 
 				ldo4_reg: ldo@4 {
@@ -653,7 +653,7 @@
 					regulator-min-microvolt = <2800000>;
 					regulator-max-microvolt = <2800000>;
 					regulator-always-on;
-					regulator-mem-on;
+					opmode-sleep-lpm;
 				};
 
 				ldo5_reg: ldo@5 {
@@ -661,8 +661,6 @@
 					regulator-name = "VCC_1.8V_IO";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
-					regulator-always-on;
-					regulator-mem-on;
 				};
 
 				ldo6_reg: ldo@6 {
@@ -671,7 +669,7 @@
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
-					regulator-mem-on;
+					opmode-sleep-off;
 				};
 
 				ldo7_reg: ldo@7 {
@@ -680,7 +678,7 @@
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
-					regulator-mem-on;
+					opmode-sleep-off;
 				};
 
 				ldo8_reg: ldo@8 {
@@ -688,7 +686,7 @@
 					regulator-name = "VMIPI_1.0V";
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				ldo9_reg: ldo@9 {
@@ -696,7 +694,7 @@
 					regulator-name = "CAM_ISP_MIPI_1.2V";
 					regulator-min-microvolt = <1200000>;
 					regulator-max-microvolt = <1200000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo10_reg: ldo@10 {
@@ -704,7 +702,7 @@
 					regulator-name = "VMIPI_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				ldo11_reg: ldo@11 {
@@ -713,7 +711,7 @@
 					regulator-min-microvolt = <1950000>;
 					regulator-max-microvolt = <1950000>;
 					regulator-always-on;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				ldo12_reg: ldo@12 {
@@ -721,7 +719,7 @@
 					regulator-name = "VUOTG_3.0V";
 					regulator-min-microvolt = <3000000>;
 					regulator-max-microvolt = <3000000>;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				ldo13_reg: ldo@13 {
@@ -729,7 +727,7 @@
 					regulator-name = "NFC_AVDD_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo14_reg: ldo@14 {
@@ -738,7 +736,7 @@
 					regulator-min-microvolt = <1950000>;
 					regulator-max-microvolt = <1950000>;
 					regulator-always-on;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				ldo15_reg: ldo@15 {
@@ -746,7 +744,7 @@
 					regulator-name = "VHSIC_1.0V";
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				ldo16_reg: ldo@16 {
@@ -755,7 +753,7 @@
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				ldo17_reg: ldo@17 {
@@ -763,7 +761,7 @@
 					regulator-name = "CAM_SENSOR_CORE_1.2V";
 					regulator-min-microvolt = <1200000>;
 					regulator-max-microvolt = <1200000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo18_reg: ldo@18 {
@@ -771,7 +769,7 @@
 					regulator-name = "CAM_ISP_SEN_IO_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo19_reg: ldo@19 {
@@ -779,7 +777,7 @@
 					regulator-name = "VT_CAM_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo20_reg: ldo@20 {
@@ -787,7 +785,7 @@
 					regulator-name = "VDDQ_PRE_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
-					regulator-mem-idle;
+					opmode-extpin-off;
 				};
 
 				ldo21_reg: ldo@21 {
@@ -795,7 +793,7 @@
 					regulator-name = "VTF_2.8V";
 					regulator-min-microvolt = <2800000>;
 					regulator-max-microvolt = <2800000>;
-					regulator-mem-idle;
+					opmode-extpin-off;
 				};
 
 				ldo22_reg: ldo@22 {
@@ -803,7 +801,7 @@
 					regulator-name = "VMEM_VDD_2.8V";
 					regulator-min-microvolt = <2800000>;
 					regulator-max-microvolt = <2800000>;
-					regulator-mem-off;
+					opmode-extpin-off;
 				};
 
 				ldo23_reg: ldo@23 {
@@ -811,7 +809,7 @@
 					regulator-name = "TSP_AVDD_3.3V";
 					regulator-min-microvolt = <3300000>;
 					regulator-max-microvolt = <3300000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo24_reg: ldo@24 {
@@ -819,7 +817,7 @@
 					regulator-name = "TSP_VDD_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo25_reg: ldo@25 {
@@ -827,7 +825,7 @@
 					regulator-name = "LCD_VCC_3.3V";
 					regulator-min-microvolt = <2800000>;
 					regulator-max-microvolt = <2800000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				ldo26_reg: ldo@26 {
@@ -835,7 +833,7 @@
 					regulator-name = "MOTOR_VCC_3.0V";
 					regulator-min-microvolt = <3000000>;
 					regulator-max-microvolt = <3000000>;
-					regulator-mem-idle;
+					opmode-sleep-lpm;
 				};
 
 				buck1_reg: buck@1 {
@@ -845,7 +843,7 @@
 					regulator-max-microvolt = <1100000>;
 					regulator-always-on;
 					regulator-boot-on;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				buck2_reg: buck@2 {
@@ -855,7 +853,7 @@
 					regulator-max-microvolt = <1500000>;
 					regulator-always-on;
 					regulator-boot-on;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				buck3_reg: buck@3 {
@@ -865,7 +863,7 @@
 					regulator-max-microvolt = <1150000>;
 					regulator-always-on;
 					regulator-boot-on;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				buck4_reg: buck@4 {
@@ -874,7 +872,7 @@
 					regulator-min-microvolt = <850000>;
 					regulator-max-microvolt = <1150000>;
 					regulator-boot-on;
-					regulator-mem-off;
+					opmode-sleep-off;
 				};
 
 				buck5_reg: buck@5 {
@@ -906,8 +904,7 @@
 					regulator-name = "VMEM_VDDF_3.0V";
 					regulator-min-microvolt = <2850000>;
 					regulator-max-microvolt = <2850000>;
-					regulator-always-on;
-					regulator-mem-off;
+					opmode-extpin-off;
 				};
 
 				buck9_reg: buck@9 {
@@ -915,7 +912,7 @@
 					regulator-name = "CAM_ISP_CORE_1.2V";
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1200000>;
-					regulator-mem-off;
+					opmode-extpin-off;
 				};
 			};
 		};
