--- a/arch/arm/boot/dts/exynos4412-trats2.dts
+++ b/arch/arm/boot/dts/exynos4412-trats2.dts
@@ -380,6 +380,15 @@
 		};
 	};
 
+	sd_reg: voltage-regulator {
+	        compatible = "regulator-fixed";
+		regulator-name = "TF_EN";
+		regulator-min-microvolt = <2800000>;
+		regulator-max-microvolt = <2800000>;
+		gpio = <&gpy2 0 0>;
+		enable-active-high;
+	};
+
 	sdhci_sd: sdhci@12530000 {
 		bus-width = <4>;
 		cd-gpios = <&gpx3 4 0>;
@@ -387,7 +396,7 @@
 		interrupts = <0 75 0>;
 		pinctrl-0 = <&sd2_clk &sd2_cmd &sd2_bus4>;
 		pinctrl-names = "default";
-		vmmc-supply = <&ldo21_reg>;
+		vmmc-supply = <&sd_reg>;
 		status = "okay";
 	};
 
