WORKAROUND: ARM: dts: add rfkill-bluetooth device node
WORKAROUND: Temporary workaround for bluetooth enable.
This patch add rfkill-bluetooth device node and pinctrl.
And then, add line for parse shutdown-gpio.

Change-Id: I1263b020f7c939a65a95c7a5b94e379a7a51210f
Signed-off-by: Beomho Seo <beomho.seo@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-trats2.dts
+++ b/arch/arm/boot/dts/exynos4412-trats2.dts
@@ -400,6 +400,8 @@
 	};
 
 	serial@13800000 {
+		pinctrl-names = "default";
+		pinctrl-0 = <&uart0_data &uart0_fctl>;
 		status = "okay";
 	};
 
@@ -413,6 +415,16 @@
 
 	serial@13830000 {
 		status = "okay";
+	};
+
+	rfkill_bt {
+		compatible = "rfkill-gpio";
+		pinctrl-0 = <&eint22>;
+		pinctrl-names = "default";
+		status = "okay";
+		rfkill-name = "bt";
+		rfkill-type = <2>;
+		shutdown-gpio = <&gpl0 6 0>;
 	};
 
 	i2c_ak8975: i2c-gpio-0 {
