tizen: update tizen_defconfig
This patch enable RFKILL_GPIO configuration.
And then remove OF_EXTON configuration.

Change-Id: Iada47a6237bd09af51e2825a8bf62f94c9fc8e90
Signed-off-by: Beomho Seo <beomho.seo@samsung.com>

--- a/arch/arm/configs/tizen_defconfig
+++ b/arch/arm/configs/tizen_defconfig
@@ -1028,7 +1028,7 @@ CONFIG_RFKILL=y
 CONFIG_RFKILL_LEDS=y
 # CONFIG_RFKILL_INPUT is not set
 # CONFIG_RFKILL_REGULATOR is not set
-# CONFIG_RFKILL_GPIO is not set
+CONFIG_RFKILL_GPIO=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
@@ -2990,7 +2990,6 @@ CONFIG_EXTCON=y
 #
 # Extcon Device Drivers
 #
-CONFIG_OF_EXTCON=y
 CONFIG_EXTCON_GPIO=y
 CONFIG_EXTCON_ADC_JACK=y
 CONFIG_EXTCON_MAX77693=y
