WORKAROUND: net: rfkill-gpio: add host wake and wake pins
WORKAROUND: Temporary workaround for bluetooth enable.
The wake pin is used for waking up the hw and host wake pin is used
for waking up host processor during sleep.
Additionally, This patch add reset-gpio property and devm_gpio_request_one
function.

Change-Id: I3695fce3b5c6162c9bad5fa0721df9bd8df505c7
Signed-off-by: Beomho Seo <beomho.seo@samsung.com>
Signed-off-by: Seung-Woo Kim <sw0312.kim@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-trats2.dts
+++ b/arch/arm/boot/dts/exynos4412-trats2.dts
@@ -425,6 +425,9 @@
 		rfkill-name = "bt";
 		rfkill-type = <2>;
 		shutdown-gpio = <&gpl0 6 0>;
+		wake-gpio = <&gpx3 1 0>;
+		host-wake-gpio = <&gpx2 6 0>;
+		reset-gpio = <0>;
 	};
 
 	i2c_ak8975: i2c-gpio-0 {
