WORKAROUND: ARM: dts: add clock property on bt device node
WORKAROUND: Temporary workaround for bluetooth enable.
This patch add clock property on rfkill_bt device node.
And then, add parse function in rfkill-gpio driver.

Change-Id: I8928cf73284c5e56f8b5671cdb8485ac39b7f0e7
Signed-off-by: Beomho Seo <beomho.seo@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-trats2.dts
+++ b/arch/arm/boot/dts/exynos4412-trats2.dts
@@ -428,6 +428,8 @@
 		wake-gpio = <&gpx3 1 0>;
 		host-wake-gpio = <&gpx2 6 0>;
 		reset-gpio = <0>;
+		clocks = <&max77686 2>;
+		clock-names = "32khz_pmic";
 	};
 
 	i2c_ak8975: i2c-gpio-0 {
