ARM: dts: odroid: Rename odroidx2 node for compatiblility
Since the sound node is not only used on odroidx2 board,
but is also used on odroidu3 board, so it's much better
to change the board name for compatibility concern.

Change-Id: I9d11491d64c3f2fbdac1a37ae333c03841fe4d85
Signed-off-by: Huang Chao <chao7.huang@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
+++ b/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
@@ -49,7 +49,7 @@
 	};
 
 	sound {
-		compatible = "samsung,odroidx2-audio";
+		compatible = "samsung,odroid-audio";
 		samsung,i2s-controller = <&i2s0>;
 		samsung,audio-codec = <&max98090>;
 	};
