--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [access]
-	inheritFrom = scm/acls/domain_system
+	inheritFrom = scm/acls/domain_system/hardware_adaptation
 [project]
-	state = active
 [receive]
