ARM: dts: Exynos4: Add idma DT node for audio driver
This patch enables the internal DMA driver for I2S0,
which is dedicated to provide the ASoC platform driver
for PCM data transfer when the secondary DAI is used.
The internal DMA can support up to two channel sounds.

Change-Id: Ia2736fd93a9fec5ff8fb320d6fa7da428303a9aa
Signed-off-by: Huang Chao <chao7.huang@samsung.com>

--- a/arch/arm/boot/dts/exynos4.dtsi
+++ b/arch/arm/boot/dts/exynos4.dtsi
@@ -646,6 +646,11 @@
 		};
 	};
 
+	idma {
+		compatible = "samsung,exynos4-idma";
+		interrupts = <0 97 0>;
+	};
+
 	fimd: fimd@11c00000 {
 		compatible = "samsung,exynos4210-fimd";
 		interrupt-parent = <&combiner>;
