ARM: odroidx2/u3: Configure GPX1[6] line to detect USB connection
Change-Id: I24518ae73488fb15596f6ea62177a0bc15a62215
Signed-off-by: Łukasz Stelmach <l.stelmach@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
+++ b/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
@@ -521,6 +521,13 @@
 		compatible = "hardkernel,odroid-reboot";
 		reset-gpio = <&gpk1 2 0>;
 	};
+
+	vbus_det {
+		compatible = "extcon-gpio";
+		gpios = <&gpx1 6 0>;
+		debounce = <50>; /* miliseconds */
+		irq_flags = <3>; /* see IRGF_* in linux/interrupt.h */
+	};
 };
 
 &pinctrl_1 {
