arm: dts: odroid: make sdhci node non-removable
Make sdhci node non-removable. This node is used for mmc card which contains
rootfs. So this device must not be removed when the system goes being suspend.

Change-Id: I878136c2e07a2a170bdd7a9b66b4db7b2d46fb80
Signed-off-by: Hyungwon Hwang <human.hwang@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
+++ b/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
@@ -79,6 +79,7 @@
 		bus-width = <4>;
 		pinctrl-0 = <&sd2_clk &sd2_cmd &sd2_cd &sd2_bus4>;
 		pinctrl-names = "default";
+		non-removable;
 		status = "okay";
 	};
 
