lib:proc_info:add library to get process information
This patch adds library to get process information without dependency
on CONFIG_PROC_FS. The new library code is moved from
fs/proc/array.c and fs/proc/task_(no)mmu.c. The functions are modified that
all process information can be retrived with a single process lock improving
performance.

Change-Id: I4d4b6a6710ad9f29d449d9a68424dfacb07c5d41
Signed-off-by: Piotr Wilczek <p.wilczek@samsung.com>

--- a/fs/proc/Kconfig
+++ b/fs/proc/Kconfig
@@ -1,5 +1,6 @@
 config PROC_FS
 	bool "/proc file system support" if EXPERT
+	select PROC_INFO
 	default y
 	help
 	  This is a virtual file system providing information about the status
