ARM: dts: odroidu3: Modify Headphone Jack name for audio routes
Since headphone and microphone can both be detected on odroidu3
board in one single Jack, and headset is composed of headphone
and microphone, it would be more precise to name it Headset Jack
instead of Headphone Jack, comparing with odroidx2 board.

Change-Id: I2c2a7b5926f723d6836d90b12826116fb29a8844
Signed-off-by: Huang Chao <chao7.huang@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-odroidu3.dts
+++ b/arch/arm/boot/dts/exynos4412-odroidu3.dts
@@ -52,10 +52,10 @@
 	compatible = "samsung,odroidu3-audio";
 	samsung,model = "Odroid-U3";
 	samsung,audio-routing =
-		"Headphone Jack", "HPL",
-		"Headphone Jack", "HPR",
-		"Headphone Jack", "MICBIAS",
-		"IN1", "Headphone Jack",
+		"Headset Jack", "HPL",
+		"Headset Jack", "HPR",
+		"Headset Jack", "MICBIAS",
+		"IN1", "Headset Jack",
 		"Speakers", "SPKL",
 		"Speakers", "SPKR";
 };
