--- a/arch/arm/boot/dts/exynos4412-odroidu3.dts
+++ b/arch/arm/boot/dts/exynos4412-odroidu3.dts
@@ -52,10 +52,10 @@
 	compatible = "samsung,odroidu3-audio";
 	samsung,model = "Odroid-U3";
 	samsung,audio-routing =
-		"Headphone Jack", "HPL",
-		"Headphone Jack", "HPR",
-		"Headphone Jack", "MICBIAS",
-		"IN1", "Headphone Jack",
+		"Headset Mic", "HPL",
+		"Headset Mic", "HPR",
+		"Headset Mic", "MICBIAS",
+		"IN1", "Headset Mic",
 		"Speakers", "SPKL",
 		"Speakers", "SPKR";
 };
