--- a/arch/arm/boot/dts/exynos4412-trats2.dts
+++ b/arch/arm/boot/dts/exynos4412-trats2.dts
@@ -1308,9 +1308,10 @@
 	};
 
 	cpufreq {
-		freq_table = <1400000 1300000 1200000 1100000 1000000
-			     900000 800000 700000 600000 500000 400000 300000
-			     200000>;
+		freq_table = <0xFFFFFFFF 0xFFFFFFFF 0xFFFFFFFF 1400000 1300000
+			      1200000    1100000    1000000 900000  800000
+			      700000     600000     500000  400000  300000
+			      200000>;
 		boost_freq = <1500000>;
 		lab-num-of-states = <5>;
 		lab-ctrl-freq = < 0          0          0          1300000    1200000
@@ -1319,6 +1320,9 @@
 				  0          0          0          0xFFFFFFFF 0xFFFFFFFF
 				  0xFFFFFFFE 0xFFFFFFFE 0xFFFFFFFE 0xFFFFFFFE 0xFFFFFFFE
 				>;
+		volt_table = <1350000 900000 900000 1287500 1250000 1187500
+			      1137500 1087500 1037500 1000000 987500 975000
+			      950000  925000  900000  900000  900000>;
 		vdd_arm-supply = <&buck2_reg>;
 		status = "okay";
 	};
