ARM: dts: odroid: add i2s secondary node
after add i2s secondary node,we can use cpu_of_node rather than cpu_dai_name
to bind audio route.

Change-Id: I8c769882cbb7e2581ae1f64fa37d1d7eaae26e60
Signed-off-by: Chen Zhen <zhen1.chen@samsung.com>

--- a/arch/arm/boot/dts/exynos4.dtsi
+++ b/arch/arm/boot/dts/exynos4.dtsi
@@ -605,6 +605,10 @@
 		status = "disabled";
 	};
 
+	i2s_sec: i2s_sec {
+		compatible = "samsung-i2s-sec";
+	};
+
 	i2s1: i2s@12D60000 {
 		compatible = "samsung,i2s-v5";
 		reg = <0x12D60000 0x100>;
