ARM: dts: exynos4412-odroidu3: set extcon in hsotg node
Change-Id: I9d9f55bb29223a97e27cbe2307860064b9cc4e2f
Signed-off-by: Robert Baldyga <r.baldyga@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-odroidu3.dts
+++ b/arch/arm/boot/dts/exynos4412-odroidu3.dts
@@ -38,6 +38,10 @@
 		gpio-vbus-det = <&gpx1 6 0>;
 	};
 
+	hsotg@12480000 {
+		extcon = <&usb_extcon>;
+	};
+
 	pwm: pwm@139D0000 {
 		pinctrl-0 = <&pwm0_out>;
 		pinctrl-names = "default";
