--- a/arch/arm/boot/dts/exynos4412-odroidx.dts
+++ b/arch/arm/boot/dts/exynos4412-odroidx.dts
@@ -38,6 +38,11 @@
 		};
 	};
 
+	usb_extcon: odroid-usbotg {
+		compatible = "extcon-odroid-usbotg";
+		gpio-vbus-det = <&gpx1 6 0>;
+	};
+
 	mshc@12550000 {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -107,5 +112,17 @@
 			compatible = "samsung,clock-xusbxti";
 			clock-frequency = <24000000>;
 		};
+	};
+};
+
+&pinctrl_1 {
+	otg_id: otg_id {
+		samsung,pins = "gpx3-1";
+		samsung,pin-pud = <3>;
+	};
+
+	vbus_det: vbus_det {
+		  samsung,pins = "gpx1-6";
+		  samsung,pin-pud = <0>;
 	};
 };
