ARM: dts: exynos4412-odroidx: set extcon in hsotg node
Change-Id: Ide3420ccb8ff473ec889b9acf9df7d62ac29f913
Signed-off-by: Robert Baldyga <r.baldyga@samsung.com>

--- a/arch/arm/boot/dts/exynos4412-odroidx.dts
+++ b/arch/arm/boot/dts/exynos4412-odroidx.dts
@@ -43,6 +43,10 @@
 		gpio-vbus-det = <&gpx1 6 0>;
 	};
 
+	hsotg@12480000 {
+		extcon = <&usb_extcon>;
+	};
+
 	mshc@12550000 {
 		#address-cells = <1>;
 		#size-cells = <0>;
